/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
import "inboxservice/InboxMessages.proto";

option java_multiple_files = true;
option java_package = "org.apache.bifromq.inbox.storage.proto";
option java_outer_classname = "InboxFetchedProtos";

package inboxservice;

message Fetched {
  enum Result {
    OK = 0;
    NO_INBOX = 1;
    BACK_PRESSURE_REJECTED = 2;
    TRY_LATER = 3;
    ERROR = 4;
  }
  Result result = 1;

  repeated InboxMessage qos0Msg = 2;

  repeated InboxMessage sendBufferMsg = 3;
}